--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,17 @@
             <version>1.2.2.1</version>
         </dependency>
     </dependencies>
+    <build>
 
-
+        <resources>
+            <!-- regular resource processsing for everything except logback.xml -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>*.*</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
 </project>
