--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,15 @@
             <artifactId>apache-poi-ooxml</artifactId>
             <version>1.2.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
+
+
     <build>
 
         <resources>
